test_scores/negative_dimers/features/P14866.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P14866.pkl.xz